[package]
name = "rocket_sunset"
version = "0.1.0"
edition = "2021"
description = "A procedural macro crate for Rocket that provides functionality for HTTP deprecation headers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bentebent/rocket_sunset"
readme = "../README.md"
keywords = ["rocket", "proc-macro", "deprecation", "http", "header"]
categories = ["web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "rocket_sunset"
path = "src/lib.rs"

[dev-dependencies]
trybuild = "1.0.41"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sunset_macro = { version = "0.1.0", path = "../rocket_sunset_macro" }
