[package]
name = "rocket_sunset_macro"
version = "0.1.0"
edition = "2021"
description = "A procedural macro crate for Rocket that provides functionality for HTTP deprecation headers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bentebent/rocket_sunset"
readme = "README.md"
keywords = ["rocket", "proc-macro", "sunset", "deprecation", "http", "header"]
categories = ["web-programming", "rocket", "http", "proc-macro"]


publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
chrono = "0.4.38"
syn = { version = "2.0.90", features = ["proc-macro", "parsing"] }
rocket = { version = "0.5.1", features = ["json"] }
